# youtube_rss

./: .cruft.json  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  cookiecutter-config-file.yml  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  build_and_publish.yml
migrations/: env.py
migrations/versions/: 0d7b56ee619f_init.py  7424c20b2691_init.py  99612f792e96_update.py
tests/: conftest.py  test_auth_handler.py  test_server.py  test_server_start_from_cli.py
tests/endpoints/: test_auth_endpoint.py  test_feed_endpoint.py
typings/feedgen/: compat.pyi  entry.pyi  feed.pyi  util.pyi  version.pyi
typings/sqlmodel_basecrud/: __init__.pyi  basecrud.pyi  baserepository.pyi
typings/yt_dlp/: cookies.pyi  utils.pyi
typings/yt_dlp/compat/: _legacy.pyi
youtube_rss/: __init__.py  __main__.py  config.py  constants.py  paths.py  start.sh
youtube_rss/api/: dependencies.py  deps.py
youtube_rss/api/v1/: api.py  deps.py  router.py
youtube_rss/api/v1/endpoints/: auth.py  feed.py  media.py  mp4.py  source.py  video.py
youtube_rss/core/: app.py  auth.py  cli.py  database.py  debug_helpers.py  logger.py  notify.py  proxy.py  server.py  utils.py
youtube_rss/crud/: __init__.py  base.py  exceptions.py  source.py  user.py  video.py
youtube_rss/data/: .env.example
youtube_rss/db/: crud.py  database.py
youtube_rss/handlers/: __init__.py  base.py  exceptions.py  rumble.py  youtube.py
youtube_rss/handlers/extractors/: rumble.py
youtube_rss/models/: common.py  feed.py  server.py  settings.py  source.py  user.py  video.py
youtube_rss/services/: crons.py  feed.py  rss_file.py  source.py  uuid.py  videos.py  ytdlp.py
youtube_rss/views/: router.py
youtube_rss/views/endpoints/: sources.py
youtube_rss/views/templates/: home.html
